CSS/styles.css
@import url("https://fonts.googleapis.com/css?family=Ubuntu|Lora:wght@400;500;600&display=swap");

@font-face {
    font-family: 'dunkinFont';
    src: url('/Lilita_One/LilitaOne-Regular.ttf') format('truetype');
    /* Add more font formats if necessary */
    /* Other font properties (font-weight, font-style) can be specified here */
  }
  
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    /* font-family: 'dunkinFont'; */
    /* list-style: none; */
    /* font-family: "Ubuntu", sans-serif; */
    border: none;
}

:root {
    --white: #fff;
    --brown: #3e342f;
    --darkpink: #c63663;
    --orange: #ef6a00;
    --grey: #747474;
    --cream: #fbf1dd;
    --borderColor: rgb(221, 216, 209);
}

.dropdown {
    src: url(/assets/asset\ 32.svg) format('svg');
}

.orange {
    color: var(--orange);
}

.brown {
    color: var(--brown);
}

.darkpink {
    color: var(--darkpink);
}

body {
    background-color: rgb(244, 241, 238);
    /* height: 4000px; */
}

.fixed-class {
    position: sticky;
    background-color: var(--white);
    top: 0px;
    width: 100%;
    z-index: 1;
    left: 0;
}

div.body {
    background-color: var(--white);
    height: 100%;
    /* width: auto; */
    border-style: none solid;
    border-color: rgb(157, 157, 157);
    border-width: 1px;
    margin: 0px 1%;
}

div.top-nav {
    display: flex;
    padding: 15px 14px;
    justify-content: end;
    align-items: center;
    border-bottom: 1px solid var(--borderColor);
    font-family: 'dunkinFont';
}

.info {
    background-color: var(--darkpink);
    color: var(--white);
    text-align: center;
    padding: 13px;
    font-family: 'dunkinFont';
}

.buttons {
    /* display: flex; */
    border: 2px solid var(--brown);
    border-radius: 50px;
    padding: 7px 20px;
    /* margin-right: 14px; */
    text-decoration: none;
    /* box-shadow: 2px 2px rgb(92, 68, 68); */
    font-family: 'dunkinFont';
    font-size: 12px;
    text-transform: uppercase;
}

.signUp_btn {
    margin-right: 14px;
}

.buttons:hover {
    /* background-color: var(--orange); */
    /* border-color: var(--orange); */
    outline: 1px solid var(--grey);
    outline-offset: 2px;
}

.utility {
    display: inline;
    width: 175px;
    flex-direction: row;
    margin-right: 20px;
}

.overide-career {
    position: relative;
    background-color: transparent;
    width: 100%;
    text-align: left;
    border-width: 1px;
    border-color: var(--grey);
    /* color: var(--grey); */
    padding: 8px 20px;
    font-family: "Ubuntu";
    text-transform: none;
    font-size: 14px;
}

.icon {
    /* display: inline; */
    position: absolute;
    /* align-items: end; */
    left: 85%;
    color: var(--grey);
    /* top: 10%; */
    /* padding: 5px; */
}

.pink {
    background-color: var(--darkpink);
    border-color: var(--darkpink);
    color: var(--white);
}

.white {
    color: var(--brown);
    border-style: solid;
}

/* navabr element */
.navbar {
    max-width: auto;
    /* align-content: center; */
    /* justify-content: center; */
    text-transform: uppercase;
    /* padding: 15px; */
}

ul.nav {
    /* max-width: auto; */
    display: flex;
    flex-direction: row;
    list-style: none;
    /* align-content: center; */
    justify-content: center;
    font-size: 1.1rem;
    /* font-weight: bold; */
}

.midDunk {
    font-size: 2.5rem;
    margin: 15px 4%;
    text-align: center;
    align-self: center;
    font-family: 'dunkinFont';
}

li.navs {
    display: inline-block;
    /* padding: 15px 4%; */
    margin: 15px 4%;
    text-align: center;
    align-self: center;
    border-bottom: 3px solid transparent;
    transition: 0.15s ease-in;
    font-family: 'dunkinFont';
}

li.navs:hover{
    color: var(--darkpink);
    /* text-decoration: underline; */
    border-bottom: 3px solid #dc87a2;
}

.main-screen {
    position: relative;
    display: flex;
    /* width: 100%; */
    background-repeat: no-repeat;
    background-size: 100%;
    /* height: auto; */
    max-width: auto;
    text-align: center;
    text-transform: uppercase;
    /* justify-content: center; */
    flex-direction: column;
    font-family: 'dunkinFont';
}

.image {
    width: 100%;
    height: auto;
}

.title-content {
    display: flex;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 10px;
    letter-spacing: 0.3vw;
    /* font-weight: 800; */
}

.trademark {
    /* position: relative; */
    vertical-align: baseline;
    font-size: 5px;
}

.center-1 {
    color: var(--orange);
    font-size:  3.3vw;
}

.center-2 {
    color: var(--darkpink);
    margin-left: -0.5vw;
}

.center-3 {
    color: var(--brown);
    font-size: 4vw;
}

.large-select-grid {
    display: flex;
    margin-top: 50px;
    flex-direction: row;
    justify-content: center;
}

.grid-select {
    width: 301px;
    /* height: 313px; */
    /* background-color: #36c6a2; */
    margin: 0 20px;
}

.interactive-images {
    display: flex;
    height: 181px;
    /* padding: 5px; */
    justify-content: center;
    transition: 0.4s ease;
    /* background-color: aqua; */
}

div.interactive-images:hover {
    /* padding: 0px; */
    transform: scale(1.08);
}

.interactive-images-text {
    font-size: 24px;
    text-align: center;
    color: var(--brown);
    padding-bottom: 20px;
    font-family: 'dunkinFont';
}

.interactive-images-text-bottom {
    color: var(--brown);
    text-align: center;
    font-size: 18px;
    font-weight: 400;
    font-family: "Ubuntu";
    line-height: 24px;
}

.learn-more {
    display: flex;
    margin: 15px 14px;
    justify-content: center;
    align-items: center;
    /* border-bottom: 1px solid rgb(211, 211, 211); */
}

.button-change {
    width: 170px;
    font-size: 16px;
    padding: 13px;
    border-width: 1.6px;
    margin: 7px;
    line-height: 16px;
    text-align: center;
}

.second-slide {
    /* width: 100%; */
    /* position: relative; */
    display: flex;
    padding: 10px 0;
    margin-top: 60px;
    /* flex-direction: column; */
    font-family: "Ubuntu";
    border-top: 1px solid var(--borderColor);

}

.second-grid {
    display: flex;
    /* font-family: "Ubuntu"; */
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: 18px;
}

.points {
    list-style-type: disc;
    list-style-position: inside;
}

.box {
    float: left;
    width: 50%;
    /* padding: 50px; */
}

.sec-slide-0 {
    /* margin-top: 20px; */
    font-family: 'dunkinFont';
    text-transform: uppercase;
    color: var(--brown);
    font-size: 60px;
    letter-spacing: 2px;
    text-align: center;
}

.sec-slide-1 {
    margin-top: 20px;
    width: 555px;
    font-size: 24px;
    font-family: "Ubuntu";
    /* font-weight: lighter; */
    text-align: center;
}

.sec-slide-2 {
    margin-top: 20px;
    font-size: 18px;
}

.large-banner-third {
    border-top: 1px solid var(--borderColor);
    background-color: var(--cream);
    background-image: url(/assets/Pumpkin_home_desktop.png);
    background-repeat: no-repeat;
    height: 415px;
}

.third-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-left: 570px;
    text-align: center;
    height: inherit;
}

.fourth-banner {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 357px;
    border-top: 1px solid var(--borderColor);
}

.fourthBox {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    justify-content: center;
}

.fourth-text h3 {
    font-family: "Ubuntu";
    color: var(--brown);
    padding-bottom: 10px;
}

.fourth-text h2 {
    font-family: "DunkinFont";
    color: var(--darkpink);
}

.espresso {
    width: 50%;
    border-right: 1px solid var(--borderColor);
}

.sandwitch {
    width: 25%;
    border-right: 1px solid var(--borderColor);
    padding-top: 40px;
    text-align: center;
}

.hotCoffee {
    width: 25%;
    padding-top: 40px;
    text-align: center;
}

.fifth-banner {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    border-top: 1px solid var(--borderColor);
}

.fifth_text {
    position: absolute;
    text-align: center;
    /* align-content: center; */
    /* padding: 59px 20px 10px 20px; */
}

.sixth-banner {
    display: flex;
    /* flex-direction: row; */
    /* width: 100%; */
    border-top: 1px solid var(--borderColor);
    border-bottom: 1px solid var(--borderColor);
}

.sixth_text {
    /* position: absolute; */
    /* display: flex; */
    width: 100%;
    text-align: center;
    padding: 59px 20px 0;
}

.footer {
    /* display: flex; */
    margin: 0 154px;
    padding: 14px;
}

.footer_share {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.quicklink_title {
    margin: 35px 0 21px;
}

ul .links {
    list-style: none;
    display: inline-table;
    padding: 10px 0;
    font-size: 14px;
    width: 125px;
    text-decoration: underline;
}

.followUs_title {
    margin: 35px 0 21px;
}

ul .socials {
    list-style: none;
    display: inline-table;
    padding-right: 14px;
}

.bottomFooter {
    /* padding: 14px 0; */
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.footer_ourPatner {
    text-align: center;
    padding-bottom: 28px;
    border-bottom: 1px solid var(--borderColor);
}

.footer_ourPatner_title {
    text-transform: uppercase;
    margin: 35px 0 21px;
}

.partners {
    display: flex;
    /* flex-direction: row; */
    width: 100%;
    justify-content: center;
    align-items: center;
    /* justify-content: right; */
}

.jetblue {
    padding: 0 20px;
}

.BR {
    /* display: flex; */
    /* width: 100%; */
    /* justify-items: right; */
    justify-content: right;
    padding: 0 30px;
}

.bottomFooter {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 14px 0;
    font-size: 12px;
}

ul .bottomFooter_list {
    list-style: none;
    text-decoration: underline;
    display: inline-block;
    padding-right: 14px;
    text-transform: capitalize;
}

